test2/grammar.output
Grammatik

    0 $accept: prgm $end

    1 prgm: %empty
    2     | prgm line

    3 line: NEWLINE
    4     | expression NEWLINE

    5 expression: assign
    6           | int_expression

    7 assign: ASSIGN IDENTIFIER
    8       | ASSIGN IDENTIFIER EQUALS int_expression

    9 int_expression: INT
   10               | int_expression MULTIPLY int_expression
   11               | int_expression DIVIDE int_expression
   12               | int_expression PLUS int_expression
   13               | int_expression MINUS int_expression


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256)
INT <ival> (258) 9
IDENTIFIER <sname> (259) 7 8
ASSIGN (260) 7 8
EQUALS (261) 8
PLUS (262) 12
MINUS (263) 13
MULTIPLY (264) 10
DIVIDE (265) 11
NEWLINE (266) 3 4


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (12)
    auf der linken Seite: 0
prgm (13)
    auf der linken Seite: 1 2, auf der rechten Seite: 0 2
line (14)
    auf der linken Seite: 3 4, auf der rechten Seite: 2
expression (15)
    auf der linken Seite: 5 6, auf der rechten Seite: 4
assign (16)
    auf der linken Seite: 7 8, auf der rechten Seite: 5
int_expression <ival> (17)
    auf der linken Seite: 9 10 11 12 13, auf der rechten Seite: 6 8
    10 11 12 13


Zustand 0

    0 $accept: . prgm $end

    $default  reduziere mit Regel 1 (prgm)

    prgm  gehe zu Zustand 1 über


Zustand 1

    0 $accept: prgm . $end
    2 prgm: prgm . line

    $end     schiebe und gehe zu Zustand 2 über
    INT      schiebe und gehe zu Zustand 3 über
    ASSIGN   schiebe und gehe zu Zustand 4 über
    NEWLINE  schiebe und gehe zu Zustand 5 über

    line            gehe zu Zustand 6 über
    expression      gehe zu Zustand 7 über
    assign          gehe zu Zustand 8 über
    int_expression  gehe zu Zustand 9 über


Zustand 2

    0 $accept: prgm $end .

    $default  annehmen


Zustand 3

    9 int_expression: INT .

    $default  reduziere mit Regel 9 (int_expression)


Zustand 4

    7 assign: ASSIGN . IDENTIFIER
    8       | ASSIGN . IDENTIFIER EQUALS int_expression

    IDENTIFIER  schiebe und gehe zu Zustand 10 über


Zustand 5

    3 line: NEWLINE .

    $default  reduziere mit Regel 3 (line)


Zustand 6

    2 prgm: prgm line .

    $default  reduziere mit Regel 2 (prgm)


Zustand 7

    4 line: expression . NEWLINE

    NEWLINE  schiebe und gehe zu Zustand 11 über


Zustand 8

    5 expression: assign .

    $default  reduziere mit Regel 5 (expression)


Zustand 9

    6 expression: int_expression .
   10 int_expression: int_expression . MULTIPLY int_expression
   11               | int_expression . DIVIDE int_expression
   12               | int_expression . PLUS int_expression
   13               | int_expression . MINUS int_expression

    PLUS      schiebe und gehe zu Zustand 12 über
    MINUS     schiebe und gehe zu Zustand 13 über
    MULTIPLY  schiebe und gehe zu Zustand 14 über
    DIVIDE    schiebe und gehe zu Zustand 15 über

    $default  reduziere mit Regel 6 (expression)


Zustand 10

    7 assign: ASSIGN IDENTIFIER .
    8       | ASSIGN IDENTIFIER . EQUALS int_expression

    EQUALS  schiebe und gehe zu Zustand 16 über

    $default  reduziere mit Regel 7 (assign)


Zustand 11

    4 line: expression NEWLINE .

    $default  reduziere mit Regel 4 (line)


Zustand 12

   12 int_expression: int_expression PLUS . int_expression

    INT  schiebe und gehe zu Zustand 3 über

    int_expression  gehe zu Zustand 17 über


Zustand 13

   13 int_expression: int_expression MINUS . int_expression

    INT  schiebe und gehe zu Zustand 3 über

    int_expression  gehe zu Zustand 18 über


Zustand 14

   10 int_expression: int_expression MULTIPLY . int_expression

    INT  schiebe und gehe zu Zustand 3 über

    int_expression  gehe zu Zustand 19 über


Zustand 15

   11 int_expression: int_expression DIVIDE . int_expression

    INT  schiebe und gehe zu Zustand 3 über

    int_expression  gehe zu Zustand 20 über


Zustand 16

    8 assign: ASSIGN IDENTIFIER EQUALS . int_expression

    INT  schiebe und gehe zu Zustand 3 über

    int_expression  gehe zu Zustand 21 über


Zustand 17

   10 int_expression: int_expression . MULTIPLY int_expression
   11               | int_expression . DIVIDE int_expression
   12               | int_expression . PLUS int_expression
   12               | int_expression PLUS int_expression .
   13               | int_expression . MINUS int_expression

    MULTIPLY  schiebe und gehe zu Zustand 14 über
    DIVIDE    schiebe und gehe zu Zustand 15 über

    $default  reduziere mit Regel 12 (int_expression)


Zustand 18

   10 int_expression: int_expression . MULTIPLY int_expression
   11               | int_expression . DIVIDE int_expression
   12               | int_expression . PLUS int_expression
   13               | int_expression . MINUS int_expression
   13               | int_expression MINUS int_expression .

    MULTIPLY  schiebe und gehe zu Zustand 14 über
    DIVIDE    schiebe und gehe zu Zustand 15 über

    $default  reduziere mit Regel 13 (int_expression)


Zustand 19

   10 int_expression: int_expression . MULTIPLY int_expression
   10               | int_expression MULTIPLY int_expression .
   11               | int_expression . DIVIDE int_expression
   12               | int_expression . PLUS int_expression
   13               | int_expression . MINUS int_expression

    $default  reduziere mit Regel 10 (int_expression)


Zustand 20

   10 int_expression: int_expression . MULTIPLY int_expression
   11               | int_expression . DIVIDE int_expression
   11               | int_expression DIVIDE int_expression .
   12               | int_expression . PLUS int_expression
   13               | int_expression . MINUS int_expression

    $default  reduziere mit Regel 11 (int_expression)


Zustand 21

    8 assign: ASSIGN IDENTIFIER EQUALS int_expression .
   10 int_expression: int_expression . MULTIPLY int_expression
   11               | int_expression . DIVIDE int_expression
   12               | int_expression . PLUS int_expression
   13               | int_expression . MINUS int_expression

    PLUS      schiebe und gehe zu Zustand 12 über
    MINUS     schiebe und gehe zu Zustand 13 über
    MULTIPLY  schiebe und gehe zu Zustand 14 über
    DIVIDE    schiebe und gehe zu Zustand 15 über

    $default  reduziere mit Regel 8 (assign)
